--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,25 +8,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme4">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RunsActivity" />
-        <activity android:name=".WicketsActivity" />
-        <activity android:name=".OversActivity" />
-        <activity android:name=".EndOverActivity" />
+        <activity android:name=".ui.RunsActivity" />
+        <activity android:name=".ui.WicketsActivity" />
+        <activity android:name=".ui.OversActivity" />
+        <activity android:name=".ui.EndOverActivity" />
         <activity
-            android:name=".InitialActivity"
+            android:name=".ui.InitialActivity"
             android:label="Bowling Type" />
         <activity
-            android:name=".ScoreActivity"
+            android:name=".ui.ScoreActivity"
             android:label="Over Score" />
-        <activity android:name=".UserActivity" />
-        <activity android:name=".TeamsActivity" />
+        <activity android:name=".ui.UserActivity" />
+        <activity android:name=".ui.TeamsActivity" />
     </application>
 
 </manifest>
